# ArchiveBot2

./: .gitignore  Cargo.toml  diesel.toml
migrations/2025-03-31-121301_create-objects/: up.sql
migrations/2025-03-31-121352_create-users/: up.sql
migrations/2025-03-31-204651_sharex/: down.sql  up.sql
src/: db.rs  downloader.rs  main.rs  pp.rs  schema.rs  sharex.rs  terminator.rs  ytdlp.rs
