[package]
name = "archivebot2"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.97"
async-sqlite = "0.5.0"
dotenvy = "0.15.7"
phf = { version = "0.11.3", features = ["macros"] }
poise = "0.6.1"
reqwest = { version = "0.12.15", features = ["json", "multipart", "stream"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
tempfile = "3.19.1"
tokio = { version = "1.44.1", features = ["rt-multi-thread", "macros"] }
typeid = "1.0.3"
