[package]
name = "archivebot2"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.97"
dotenvy = "0.15.7"
poise = {git = "https://github.com/serenity-rs/poise", branch = "current"}
reqwest = { version = "0.12.15", features = ["json", "multipart", "stream"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
tempfile = "3.19.1"
tokio = { version = "1.44.1", features = ["rt-multi-thread", "macros", "process", "io-std"] }
typeid = "1.0.3"
diesel = { version = "2.2.0", features = ["sqlite", "returning_clauses_for_sqlite_3_35"] }
deadpool = "0.12.2"
deadpool-diesel = "0.6.1"
humansize = "2.1.3"
tracing-subscriber = "0.3.19"
tracing = "0.1.41"
tokio_schedule = "0.3.2"
